PROJECT(tester)
CMAKE_MINIMUM_REQUIRED(VERSION 3.1)
INCLUDE(CheckIncludeFileCXX)

SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR}/../lib)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR}/../lib)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR}/../bin)
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/../lib)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/../lib)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/../bin)
SET(CMAKE_DEBUG_POSTFIX d)

INCLUDE_DIRECTORIES(./ ../tool/src/)
INCLUDE_DIRECTORIES(./ ../include/)
AUX_SOURCE_DIRECTORY(. DIR_SRCS)

SET(SRC "./pb/test1.pb.h" "./pb/test1.pb.cc" "./pb/test1.struct.h")
SOURCE_GROUP(src FILES ${SRC})

SET(TESTER "./main.cpp")
SOURCE_GROUP(tester FILES ${TESTER})

IF (MSVC)
    SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MT")
    SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MTd")
ENDIF(MSVC)

LINK_DIRECTORIES("./lib")
ADD_EXECUTABLE(tester ${TESTER} ${SRC})
TARGET_LINK_LIBRARIES(tester debug PBWrapperd)
TARGET_LINK_LIBRARIES(tester optimized PBWrapper)
TARGET_LINK_LIBRARIES(tester debug libprotobufd)
TARGET_LINK_LIBRARIES(tester optimized libprotobuf)
